[FEAT] add feature authorization