@@ -6,9 +6,8 @@ import com.enigma.enigma_sis.dto.response.EnrollmentDetailResponse;
 import com.enigma.enigma_sis.dto.response.EnrollmentResponse;
 import com.enigma.enigma_sis.entity.*;
 import com.enigma.enigma_sis.repository.EnrollmentRepository;
-import com.enigma.enigma_sis.repository.SubjectRepository;
-import com.enigma.enigma_sis.repository.TeacherRepository;
 import com.enigma.enigma_sis.service.*;
+import com.enigma.enigma_sis.util.ValidationUtil;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
@@ -22,16 +21,30 @@ import java.util.stream.Collectors;
 @RequiredArgsConstructor
 public class EnrollmentServiceImpl implements EnrollmentService {
     private final EnrollmentRepository enrollmentRepository;
+
     private final EnrollmentDetailService enrollmentDetailService;
     private final StudentService studentService;
-    private final SubjectRepository subjectRepository;
-    private final TeacherRepository teacherRepository;
+    private final TeacherService teacherService;
+    private final SubjectService subjectService;
+    private final UserService userService;
+
+    private final ValidationUtil validationUtil;
 
     @Transactional(rollbackFor = Exception.class)
     @Override
     public EnrollmentResponse create(EnrollmentRequest enrollmentRequest) {
+        // Validasi input
+        validationUtil.validate(enrollmentRequest);
+
         // Cari objek Student sesuai dengan ID dari Enrollment Request
         Student studentById = studentService.getById(enrollmentRequest.getStudentId());
+
+        // Cek apakah yang membuat enrollment adalah student yang bersangkutan
+        UserAccount userAccount = userService.getByContext();
+        if (!userAccount.getId().equals(studentById.getUserAccount().getId())) {
+            throw new ResponseStatusException(HttpStatus.FORBIDDEN,
+                    ConstantMessage.USER_INVALID);
+        }
 
         // Buat objek Enrollment tanpa Enrollment Detail dan simpan
         Enrollment enrollment = Enrollment
@@ -41,31 +54,24 @@ public class EnrollmentServiceImpl implements EnrollmentService {
                 .build();
         enrollmentRepository.saveAndFlush(enrollment);
 
-        // Buat Enrollment Detail dan simpan
+        // Buat Enrollment Detail
         List<EnrollmentDetail> enrollmentDetails = enrollmentRequest
                 .getEnrollmentDetails().stream().map(
                         detailRequest -> {
-                            Subject subject = subjectRepository.findById(detailRequest.getSubjectId())
-                                    .orElseThrow(() -> new ResponseStatusException(
-                                            HttpStatus.NOT_FOUND, ConstantMessage.NOT_FOUND));
-
-                            Teacher teacher = teacherRepository.findById(detailRequest.getTeacherId())
-                                    .orElseThrow(() -> new ResponseStatusException(
-                                            HttpStatus.NOT_FOUND, ConstantMessage.NOT_FOUND));
-
                             return EnrollmentDetail.builder()
                                     .enrollment(enrollment)
-                                    .subject(subject)
-                                    .teacher(teacher)
+                                    .subject(subjectService.getById(detailRequest.getSubjectId()))
+                                    .teacher(teacherService.getById(
+                                            subjectService.getById(detailRequest.getSubjectId())
+                                                    .getTeacher().getId()))
                                     .build();
-                        }).collect(Collectors.toList());
+                        }).toList();
 
         // Simpan Enrollment Detail
         enrollmentDetailService.createBulk(enrollmentDetails);
 
         // Tambah Enrollment Detail ke dalam Enrollment dan simpan
         enrollment.setEnrollmentDetails(enrollmentDetails);
-        enrollmentRepository.saveAndFlush(enrollment);
 
         // Buat Enrollment Detail Response untuk Enrollment Response
         List<EnrollmentDetailResponse> detailResponses = enrollmentDetails
@@ -88,8 +94,16 @@ public class EnrollmentServiceImpl implements EnrollmentService {
 
     @Transactional(readOnly = true)
     @Override
-    public List<EnrollmentResponse> getAll() {
-        List<Enrollment> enrollments = enrollmentRepository.findAll();
+    public List<EnrollmentResponse> getAll(String studentId) {
+        Student studentById = studentService.getById(studentId);
+
+        UserAccount userAccount = userService.getByContext();
+        if (!userAccount.getId().equals(studentById.getUserAccount().getId())) {
+            throw new ResponseStatusException(HttpStatus.FORBIDDEN,
+                    ConstantMessage.USER_INVALID);
+        }
+
+        List<Enrollment> enrollments = enrollmentRepository.findAllByStudentId(studentId);
 
         return enrollments.stream()
                 .map(enrollment -> {
